# AndroidExerciseDemo

./: .gitignore  .travis.yml  CHANGELOG.md  build.gradle  gradle.properties  private.properties  settings.gradle
HelloWorld/: build.gradle
HelloWorld/src/main/groovy/com/cain/testplugin/: HelloWorldPlugin.groovy
LifeCycle_Plugin/: build.gradle
LifeCycle_Plugin/src/main/java/com.tencent.qgame.cain.lifecycle/: MyLifecycleClassVisitor.java  MyLifecycleOnCreateMethodVisitor.java  MyLifecycleOnDestroyMethodVisitor.java
app/: CMakeLists.txt  build.gradle  thread_optimize.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cain/tencent/com/androidexercisedemo/: AnimatorActivity.java  Anko1Activity.kt  AppImageUtil.java  BaseDemoDialog.java  BaseDialog.java  BitmapActivity.kt  CacheActivity.java  ColorEvaluator.java  ComboActivity.kt  DensityUtil.java  Empty1Activity.kt  Empty2Activity.kt  EvaluatorView.java  FirstRechargeDialog.kt  FrescoActivity.kt  FrescoCacheActivity.kt  Images.java  MainActivity.kt  MyApplication.kt  MyMainActivity.kt  MyUtils.kt  NDKBridge.java  OptimizeLayoutActivity.java  PhotoWallActivity.kt  PhotoWallAdapter.java  Point.java  PointEvaluator.java  QGameDraweeView.kt  QGameSimpleDraweeView.java  RoundAsCircleAndOverlayPostProcessor.kt  RxJavaActivity.java  TipsActivity.java  Util.kt  ValidationResult.kt  ViewModelMethod.java  WavFileHeader.java  WavFileReader.java  WebPCacheActivity.kt
app/src/main/java/cain/tencent/com/androidexercisedemo/animator/: AnimatorActivity.java  ColorEvaluator.java  EvaluatorView.java  PictureAdapter.java  Point.java  PointEvaluator.java  Rotate3dAnimation.java
app/src/main/java/cain/tencent/com/androidexercisedemo/animator/data/: Picture.java
app/src/main/java/cain/tencent/com/androidexercisedemo/audiotrack/: AudioActivity.java  AudioTrackActivity.java  GlobalConfig.java  PcmToWavUtil.java
app/src/main/java/cain/tencent/com/androidexercisedemo/bitmap/: AppImageUtil.java  BitmapActivity.kt  FrescoActivity.kt  FrescoCacheActivity.kt  Images.java  PhotoWallActivity.kt  PhotoWallAdapter.java  RotateActivity.java  RoundAsCircleAndOverlayPostProcessor.kt  ViewModelMethod.java  WebPCacheActivity.kt
app/src/main/java/cain/tencent/com/androidexercisedemo/cache/: CacheActivity.java  DiskLruCache.java  StrictLineReader.java  Util.java
app/src/main/java/cain/tencent/com/androidexercisedemo/dialog/: ComboBtnView.kt  FirstRechargeDemoDemoDialog.kt  GiftComboBtnDialog.kt  GiftComboView.kt
app/src/main/java/cain/tencent/com/androidexercisedemo/domain/: Address.kt  User.kt
app/src/main/java/cain/tencent/com/androidexercisedemo/ffmpeg/: FFMpegActivity.java  FFVideoPlayer.java
app/src/main/java/cain/tencent/com/androidexercisedemo/utils/: DensityUtil.java  ImageUtil.kt  MyThread.java  MyUtilsDemo.kt  RxJavaUtils.kt  RxTrace.kt  RxUtils.kt  Test.java  ThreadManagerWrapper.java  Util.kt
app/src/main/java/com/facebook/imagepipeline/animated/impl/: QGameAnimatedFrameCache.java
app/src/main/jni/: VbrTag.h  id3tag.c  lame-analysis.h  lame.c  ndk_test_jni.cpp  ndk_test_jni.h  quantize.c  quantize.h
app/src/main/jni/lame/: VbrTag.c  bitstream.h  fft.h  newmdct.h  psymodel.h  quantize_pvt.h  reservoir.h  set_get.h  tables.h  util.c  util.h
app/src/main/res/drawable/: live_circle.xml
app/src/main/res/layout/: activity_animator.xml  activity_anko1.xml  activity_audio_track.xml  activity_bitmap.xml  activity_empty1.xml  activity_ffmpeg.xml  activity_fresco.xml  activity_fresco_cache.xml  activity_lua_cache.xml  activity_main.xml  activity_optimize_layout.xml  activity_photo_wall.xml  activity_rotate.xml  activity_rx_java.xml  activity_tips.xml  activity_web_pcache.xml  dialog_first_charge_layout.xml  dialog_gift_combo.xml  ok_cancel_layout.xml  photo_layout.xml  profile_extra.xml  titlebar.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/cain/tencent/com/androidexercisedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
gradle_plugin/: build.gradle
gradle_plugin/src/main/groovy.com.tencent.cain.gradle_plugin/: HelloWorldPlugin.groovy
lintrules/: build.gradle
lintrulsaar/: build.gradle
lintrulsaar/src/main/: AndroidManifest.xml
lintrulsaar/src/main/res/values/: strings.xml
(+9 files in other folders)
